--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <div class="container">
 <h1>Política de Privacidad</h1>
-<p><strong>Última actualización:</strong> 2025</p>
+<p><strong>Última actualización:</strong> 02/01/2026</p>
 
 <p>Opinio respeta tu privacidad. Esta Política de Privacidad explica cómo recopilamos, usamos y protegemos tu información cuando utilizas nuestra aplicación.</p>
 
