--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <p>Nos reservamos el derecho de modificar esta política.</p>
 
 <h2>7. Contacto</h2>
-<p>Correo de contacto: <strong>opinio.app@gmail.com</strong></p>
+<p>Correo de contacto: <strong>opinio.contact@gmail.com</strong></p>
 </div>
 
 </body>
